--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a:hover{
     flex-direction: column;
     width: 100%; 
     height: 390px;
-    background-image: url("../assets/cars.jpg");
+    background-image: url("../assets/background4.jpg");
     background-size: 100% 100%;
 }
 .TopSection0{
@@ -101,7 +101,7 @@ a:hover{
     flex-direction: column;
     width: 100%; 
     height: 390px;
-    background-image: url("../assets/feedback.jpg");
+    background-image: url("../assets/feedback4.png");
     background-size: 100% 100%;
 }
  .h4-section{
@@ -236,7 +236,51 @@ a:hover{
     border-radius: 15px;
     background-color: #e4461f;   
     color: white; 
-
 }
+
+/*CONTACT FORM*/
+
+.formBox{
+    width: 500px;
+    height: 500px;
+    margin: 50px auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url("../assets/contactForm3.jpg");
+    border-radius: 30px;}
+.inputi{
+    width: 350px;
+    height: 25px;
+    margin: 0 auto ;
+    padding: 1em;
+}
+.message{
+    width: 350px;
+    height: 75px;
+    margin: 0 auto ;  
+    padding: 1em;
+}
+ 
+.formBox h2{
+    align-self: center;
+    margin-bottom: 50px;
     
+}
+.submit{
+    width: 120px;
+    height: 50px;
+    margin: 0 auto ;  
+    background-color: rgb(17, 17, 158);
+}
+.formBox input{
+    color: rgb(97, 95, 94);
+    border-radius: 30px;  
+    border: 2px solid #f3f1f1; 
+}
+.container{
+    background-image: url("../assets/contactForm.jpg");
+    background-size: 100% 100%;
+}
+
     
