--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-*{
+/**{
     margin: 0;
     padding: 0;
 }
@@ -62,7 +62,7 @@ a:hover{
     
 .nav ul li a:hover{
     color: #e4461f;
-}
+}   */
 
 /*TopSection - Home */
 
