--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .header{    
     display: flex;
-    width: 100%    
+    width: 100% ;   
 }
 .logo{
     width: 50%;
@@ -19,7 +19,7 @@
     font-size: 30px;
     color: #ffffff;
 }
-a:hover{
+.a-bottom:hover{
     border-bottom: 1px solid red;
 }
     
@@ -418,3 +418,61 @@ footer{
     color: #e4461f;
  }
     
+ /*LoginForm & Register Form*/
+ .login-body{
+    background-image: url("../assets/login6.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 2em 3em;
+ }
+ .login-body .loginTop{
+    text-decoration: none;
+    font-size: 30px;
+    color: #ffffff;
+ }
+ .register-body .loginTop{
+    text-decoration: none;
+    font-size: 30px;
+    color: #ffffff;
+ }
+ .login-body span{
+    font-size: 30px;
+    color:#e4461f;   
+ }
+ .register-body span{
+    font-size: 30px;
+    color:#e4461f;   
+ }
+ .register-body span{
+    font-size: 30px;
+    color:#e4461f;   
+ }
+ .register-body{
+    background-image: url("../assets/login7.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 2em 3em;
+ }
+ .login-box{
+    background-color: rgba(224, 93, 5, 0.5);
+    width: 500px;
+    height: 500px;
+    margin: 150px auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 30px;
+    background-image: url("../assets/background10.jpg");
+ }
+ .login-box h1{
+    align-self: center;
+ }
+ .login-box label{
+    align-self: center;
+ }
+ .login-box input{
+    align-self: center;
+    border-color: #e4461f;
+    border-radius: 30px;
+ }
+ 
