--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,26 @@
     padding: 0;
 }
 
-.header{    
+header{ 
     display: flex;
-    width: 100% ;   
+}
+header h2{
+    position: absolute; 
+    margin: 250px 0 0 350px;
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    letter-spacing: 3px;
+    line-height: 1.1;
+}
+video{
+    position: absolute;
+    height: 710px;
+    object-fit:contain;
 }
 .logo{
+    position: relative;
     width: 50%;
-    background:  #2a2f2d;
     padding: 25px 95px;
 }
     
@@ -28,11 +41,9 @@
 }
     
 .content-nav{
-    
      display: flex;
      width: 50%;
      padding: 20px 60px;
-     background:  #2a2f2d;
     
 }
 .nav{
@@ -117,7 +128,7 @@
     letter-spacing: .2rem;
 }
 .offers{
-    margin-top: 402px;
+    margin-top: 650px;
     width: 97%;
     margin-left: 20px;
     height: 580px;
@@ -251,19 +262,30 @@
     background-size: 100% 100%;
     border-radius: 30px;
 }
+form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+form textarea{
+    padding: 4px 15px 4px 15px;
+    width: 350px;
+    margin: 0 auto;
+    border-radius: 30px;  
+    border: 2px solid #f3f1f1; 
+}
+form label{
+    margin: 0 auto;
+}
+form span{
+    margin: 0 auto; 
+}
 .inputi{
     width: 350px;
     height: 45px;
     margin: 0 auto ;
     padding: 1em;
-}
-.message{
-    width: 350px;
-    height: 135px;
-    margin: 0 auto ;  
-    padding: 1em;
-}
- 
+} 
 .formBox h1{
     align-self: center;
     margin-bottom: 50px;
@@ -300,7 +322,7 @@ footer{
     text-align: left;
     font: bold 16px sans-serif;
     padding: 50px 50px 60px 50px;
-    margin-top: 80px;
+    margin-top: 30px;
 }
 .footer-distributed .footer-l{
     display: inline-block;
@@ -456,13 +478,24 @@ footer{
  .login-box{
     background-color: rgba(224, 93, 5, 0.5);
     width: 500px;
-    height: 500px;
-    margin: 150px auto;
+    height: 450px;
+    margin: 35px auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
     border-radius: 30px;
-    background-image: url("../assets/background10.jpg");
+    background-image: url("../assets/login11.jpg");
+ }
+ .register-box{
+    background-color: rgba(224, 93, 5, 0.5);
+    width: 500px;
+    height: 900px;
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 30px;
+    background-image: url("../assets/login11.jpg");
  }
  .login-box h1{
     align-self: center;
@@ -471,6 +504,18 @@ footer{
     align-self: center;
  }
  .login-box input{
+    align-self: center;
+    border-color: #e4461f;
+    border-radius: 30px;
+ }
+
+ .register-box h1{
+    align-self: center;
+ }
+ .register-box label{
+    align-self: center;
+ }
+ .register-box input{
     align-self: center;
     border-color: #e4461f;
     border-radius: 30px;
