--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,18 @@ header{
 }
 header h2{
     position: absolute; 
-    margin: 250px 0 0 350px;
+    margin: 200px 0 0 390px;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     letter-spacing: 3px;
-    line-height: 1.1;
+    line-height: 1.3;
 }
 video{
     position: absolute;
-    height: 710px;
-    object-fit:contain;
+    width: 100%;
+    height: 500px;
+    object-fit:fill;
 }
 .logo{
     position: relative;
@@ -75,9 +76,62 @@ video{
     color: #e4461f;
 }   
 
-/*TopSection - Home */
+/*Slider - Home */
+#slides {
+    position: relative;
+    height: 450px;
+    padding: 0px;
+    margin: 2px 0 0 0;
+    list-style-type: none;
+}
 
-#slideshow {
+.slide {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.showing {
+    opacity: 1;
+    z-index: 2;
+}
+
+.slide {
+    font-size: 40px;
+    padding: 40px;
+    box-sizing: border-box;
+    background: #333;
+    color: #fff;
+}
+
+.slide:nth-of-type(1) {
+    background-image: url("../assets/Cars-and-DrivingImage.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.slide:nth-of-type(2) {
+    background-image: url("../assets/background4.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.slide:nth-of-type(3) {
+    background-image: url("../assets/feedback4.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+/* #slideshow {
     position: relative;
 }
 #slideshow div {
@@ -115,7 +169,7 @@ video{
     height: 390px;
     background-image: url("../assets/feedback4.png");
     background-size: 100% 100%;
-}
+} */
  .h4-section{
     color: #e4461f;
     width: auto;
@@ -127,8 +181,49 @@ video{
     text-align: center;
     letter-spacing: .2rem;
 }
+/*DetialSection */
+.detailSection{
+    width: 100%;
+    height: 390px;
+    margin: 410px 0 0 0;
+    display: flex;
+    justify-content: space-around;
+    background-image: url("../assets/contactForm2.jpg");
+}
+.detailSection .foto1{
+    width: 400px;
+    height: 310px;
+    background-image: url("../assets/budget.webp");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin: 10px 0 10px 0;
+    border-radius: 20px;
+}
+.detailSection .foto2{
+    width: 400px;
+    height: 310px;
+    background-image: url("../assets/onlineRent.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin: 40px 0 10px 0;
+    border-radius: 20px;
+
+
+}
+.detailSection .foto3{
+    width: 400px;
+    height: 310px;
+    background-image: url("../assets/process.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin: 70px 0 10px 0;
+    border-radius: 20px;
+
+}
+
+/*Offers Section */
 .offers{
-    margin-top: 650px;
+    margin-top: 2px;
     width: 97%;
     margin-left: 20px;
     height: 580px;
@@ -322,7 +417,7 @@ footer{
     text-align: left;
     font: bold 16px sans-serif;
     padding: 50px 50px 60px 50px;
-    margin-top: 30px;
+    margin-top: 2px;
 }
 .footer-distributed .footer-l{
     display: inline-block;
