Editimi i tekstit ne slider

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ video{
     color: #ffffff;
     width: auto;
     text-align: center;
+    font-size: 25px;
     letter-spacing: .2rem;
 }
 /*DetialSection */
