--- a/css/style.css
+++ b/css/style.css
@@ -580,24 +580,27 @@ footer{
     justify-content: center;
     flex-direction: column;
     border-radius: 30px;
-    background-image: url("../assets/login11.jpg");
+    background-image: url("../assets/contactForm2.jpg");
  }
  .register-box{
     background-color: rgba(224, 93, 5, 0.5);
     width: 500px;
-    height: 899px;
+    height: 839px;
     margin: 30px auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
     border-radius: 30px;
-    background-image: url("../assets/login11.jpg");
+    background-image: url("../assets/contactForm2.jpg");
  }
  .login-box h1{
     align-self: center;
+    color: white;
  }
  .login-box label{
-    align-self: center;
+    color: white;
+    margin-left: 90;
+    margin-bottom: 10px;
  }
  .login-box input{
     align-self: center;
@@ -607,10 +610,14 @@ footer{
 
  .register-box h1{
     align-self: center;
+    color: white;
  }
- .register-box label{
-    align-self: center;
- }
+.labelRegister{
+    margin-left: 90;
+    margin-bottom: 10px;
+    color: white;
+}
+
  .register-box input{
     align-self: center;
     border-color: #e4461f;
