--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,44 @@ footer{
     border-radius: 30px;
  }
  
+body{
+
+    background-color: aqua;
+
+}
+
+/* Products -- Cars */
+
+
+.Car-products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+  background: #ccc;
+  margin: 3em auto;
+  padding:  0;
+  
+  width: 800px;
+  
+}
+
+
+.product {
+  flex: 0 0 120px;
+  
+  background: #fff;
+  margin: 0 ;
+  padding: 0;
+ 
+}
+ 
+.product img{
+
+    width: 200px;
+    height:200px;
+      
+}
+
+
+  
