--- a/css/style.css
+++ b/css/style.css
@@ -738,5 +738,45 @@ body{
       
 }
 
+/*Animation box*/
 
+.box{
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    height: 25px;
+    animation-name: boxAnimation;
+    animation-duration: 2.5s;
+    animation-iteration-count:initial;
+    
+    }
+    .box h1{
 
+        color: #3b4d64;
+        font-weight: bold;
+        font-family: cursive;
+        margin-top: 35px;
+        
+    }
+
+    
+    @keyframes  boxAnimation{
+      
+    from{  
+             
+     background-color: #7f8ea1;
+
+    }
+    
+    to{                    
+     background: white;
+    margin-left:275px;
+    margin-top: 100px;
+    width: 800px;
+    height: 120px;
+    border-radius: 20px;
+    }
+
+    }
+
+    
