--- a/admin-css/style.css
+++ b/admin-css/style.css
@@ -135,14 +135,14 @@ nav{
 
 #sidebar-items{
     padding:0px;
-    color:#74818d !important;
+    color:#000000 !important;
     padding: 10px 20px;
 }
 
 #sidebar-items ul li a{
-    padding: 0px;
-    color: #74818d !important;
-    padding: 10px 20px;
+    color: #000000 !important;
+    padding: 10px 0;
+    font-size: 16px;
 }
 
 
@@ -155,7 +155,10 @@ nav{
     padding-inline-start: 0px;
 }
 a .fa-chevron-right{
+    margin-top: 4px;
     float:right;
+    font-size: 16px;
+    color: rgb(43, 43, 43);
 }
 #sidebar-items > ul > li{
     padding: 10px 0px 10px  0px;
@@ -205,7 +208,7 @@ a .fa-chevron-right{
 hr{
     height: 1px;
     color: #dde2e9;
-    background-color: #dde2e9;
+    background-color: #000000;
     border: none;
 
 }
@@ -256,7 +259,10 @@ hr{
 }
 
 #movies td {
-    color: #5d5d5d;
+    color: #232236 !important;
+}
+a{
+    text-decoration: none;
 }
 
 .bg-light {
